--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^10.4.0",
+    "firebase": "^10.10.0",
     "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
+    "match-sorter": "^6.3.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.1",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
